test/good/functions/variadic05.px

func f(Bool... args) def
    args[0] = true
    print args[0]

a = [false]
f(...a)
print a

b = false
f(b)
print b
