test/bad/functions/type09.px

func neg(Bool b: false) Bool def
    return not b

func f(Bool->Bool g) Bool def
    return g(b=true)

print f(neg)
